ubuntu-dev-tools (0.56) UNRELEASED; urgency=low

  * manage-credentials: Tighted security by making credentials files and
    folder world unreadable.

 -- Jonathan Davies <jpds@ubuntu.com>  Thu, 15 Jan 2009 12:35:12 +0000

ubuntu-dev-tools (0.55) jaunty; urgency=low

  * manage-credentials: Use common.py's mkdir function to create as many
    subdirectories as necessary for the credentials directory (LP: #317317).

 -- Jonathan Davies <jpds@ubuntu.com>  Thu, 15 Jan 2009 12:33:31 +0000

ubuntu-dev-tools (0.54) jaunty; urgency=low

  * manage-credentials:
    - Save credentials to ~/.cache/lp_credentials/ by
      default.
    - Set service option default to edge.
  * doc/manage-credentials.1: Update as necessary for the above.
  * common.py:
    - When credentials are not found, ask user to see
      manage-credentials manpage.
    - Load all token files for the consumer specified in the above
      directory as necessary. 

 -- Jonathan Davies <jpds@ubuntu.com>  Wed, 14 Jan 2009 19:39:35 +0000

ubuntu-dev-tools (0.53) jaunty; urgency=low

  [ Siegfried-Angel Gevatter Pujals ]
  * debian/copyright:
     - Add information about manage-credentials.

  [ Daniel Holbach ]
  * debian/control: replace 'sb-release' with lsb-release, make package 
    installable again.

 -- Daniel Holbach <daniel.holbach@ubuntu.com>  Wed, 14 Jan 2009 16:27:34 +0100

ubuntu-dev-tools (0.52) jaunty; urgency=low

  [ Siegfried-Angel Gevatter Pujals ]
  * pbuilder-dist.new:
    - Add compatibility for cowbuilder.
    - Fix the mainonly support.
    - Rename build.log to last_operation.log.
  * pbuilder-dist, pbuilder-dist.new:
    - Replace pbuilder-dist with pbuilder-dist.new.
  * debian/links:
    - Symlink /usr/bin/cowbuilder-dist to /usr/bin/pbuilder-dist, and the
      same with the manpage.
  * debian/control:
    - Add cowdancer as alternative recommends to pbuilder.
  * doc/pbuilder-dist.1:
    - Update it to explain the usage for the new pbuilder-dist script.
  * doc/mk-sbuild-lv.1: