@@ -290,8 +290,9 @@ def find_credentials(consumer, files, level=None):
             continue
         if cred.consumer.key == consumer:
             return cred        
-    raise IOError("No credentials found, please see the manage-credentials " \
-            "manpage for help on how to create them.")
+    raise IOError("No credentials found for '%s', please see the " \
+            "manage-credentials manpage for help on how to create " \
+            "one for this consumer." % consumer)
     
 def get_credentials(consumer, cred_file=None, level=None):
     files = list()
